[package]
name = "secp256k1"
version = "0.20.3"
authors = [ "Dawid Ciężarkiewicz <dpc@ucore.info>",
            "Andrew Poelstra <apoelstra@wpsoftware.net>" ]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-secp256k1/"
repository = "https://github.com/rust-bitcoin/rust-secp256k1/"
documentation = "https://docs.rs/secp256k1/"
description = "Rust bindings for Pieter Wuille's `libsecp256k1` library. Implements ECDSA for the SECG elliptic curve group secp256k1 and related utilities."
keywords = [ "crypto", "ECDSA", "secp256k1", "libsecp256k1", "bitcoin" ]
readme = "README.md"
autoexamples = false # Remove when edition 2018 https://github.com/rust-lang/cargo/issues/5330

# Should make docs.rs show all functions, even those behind non-default features
[package.metadata.docs.rs]
features = [ "rand", "rand-std", "serde", "recovery" ]

[features]
unstable = ["recovery", "rand-std"]
default = ["std"]
std = ["mesalock_sgx"]
# allow use of Secp256k1::new and related API that requires an allocator
alloc = []
rand-std = ["rand/std"]
recovery = ["secp256k1-sys/recovery"]
lowmemory = ["secp256k1-sys/lowmemory"]
global-context = ["std", "rand-std", "global-context-less-secure"]
global-context-less-secure = []
mesalock_sgx = ["sgx_tstd","randx"]
randx = []

[dependencies]
secp256k1-sys = { version = "0.4.0", default-features = false, path = "./secp256k1-sys" }
bitcoin_hashes = { version = "0.9", optional = true }
rand = {  git="https://github.com/mesalock-linux/rand-sgx.git" }
serde = { version = "1.0", default-features = false, optional = true,git="https://github.com/mesalock-linux/serde-sgx.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }


#[dev-dependencies]
#rand = "0.6"
#rand_core = "0.4"
#serde_test = "1.0"
#bitcoin_hashes = "0.9"

#[target.wasm32-unknown-unknown.dev-dependencies]
#wasm-bindgen-test = "0.3"
#rand = { version = "0.6", features = ["wasm-bindgen"] }


[[example]]
name = "sign_verify_recovery"
required-features = ["recovery"]

[[example]]
name = "sign_verify"

[[example]]
name = "generate_keys"
required-features = ["rand"]

[workspace]
members = ["secp256k1-sys"]
exclude = ["no_std_test"]
